Implementação de link para instagram em Navbar

--- a/cardapio.html
+++ b/cardapio.html
@@ -72,6 +72,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-link-site" href="#">Curiosidades</a>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="https://www.instagram.com/lepaincaseiro/"><i
+                                    class="fab fa-instagram fa-lg"></i></a>
+                        </li>
                     </ul>
                 </div>
 
@@ -178,10 +182,12 @@
 
                 <div class="d-flex">
                     <div class="d-flex rounded-circle text-center bg-pink-site">
-                        <a class="m-auto" href=""><i class="fab fa-instagram text-white fa-1.5x"></i></a>
+                        <a class="m-auto" href="https://www.instagram.com/lepaincaseiro/"><i
+                                class="fab fa-instagram text-white fa-1.5x"></i></a>
                     </div>
                     <div class="d-flex rounded-circle text-center bg-site ml-2">
-                        <a class="m-auto" href=""><i class="fas fa-map-marker-alt text-white fa-1.5x"></i></a>
+                        <a class="m-auto" href="https://goo.gl/maps/oPKwgrUTj3w8CZZ49"><i
+                                class="fas fa-map-marker-alt text-white fa-1.5x"></i></a>
                     </div>
                 </div>
 
