--- a/sobre.html
+++ b/sobre.html
@@ -51,33 +51,37 @@
                 <img src="./images/logo.png" alt="logo">
             </div>
 
-          <!-- Navbar -->
-          <nav id="navbar" class="col-6 col-md-10 text-right ml-auto my-auto navbar navbar-expand-lg">
+            <!-- Navbar -->
+            <nav id="navbar" class="col-6 col-md-10 text-right ml-auto my-auto navbar navbar-expand-lg">
 
-            <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite"
-                aria-controls="navbarSite" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="text-site"><i class="fas fa-bars mr-2 text-site"></i>Menu</span>
-            </button>
+                <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite"
+                    aria-controls="navbarSite" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="text-site"><i class="fas fa-bars mr-2 text-site"></i>Menu</span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarSite">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="index.html">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-site" href="#">Curiosidades</a>
-                </ul>
-            </div>
-        
-        </nav>
-             
-    </div>
+                <div class="collapse navbar-collapse" id="navbarSite">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="#">Curiosidades</a>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-site" href="https://www.instagram.com/lepaincaseiro/"><i
+                                    class="fab fa-instagram fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </div>
+
+            </nav>
+
+        </div>
 
         <!-- About -->
         <div id="about" class="col-11 mx-auto my-5 py-5">
@@ -93,7 +97,8 @@
                 <div class="col-12 col-md-6 ml-auto my-auto">
                     <h2 class="card-title text-site"><strong>Pães caseiros sem conservantes e sob
                             encomenda</strong></h2>
-                    <p class="card-text text-white">Um exemplo de texto rápido para construir o título do card e fazer preencher o
+                    <p class="card-text text-white">Um exemplo de texto rápido para construir o título do card e fazer
+                        preencher o
                         conteúdo do card.</p>
                 </div>
 
@@ -113,10 +118,12 @@
 
                 <div class="d-flex">
                     <div class="d-flex rounded-circle text-center bg-pink-site">
-                        <a class="m-auto" href=""><i class="fab fa-instagram text-white fa-1.5x"></i></a>
+                        <a class="m-auto" href="https://www.instagram.com/lepaincaseiro/"><i
+                                class="fab fa-instagram text-white fa-1.5x"></i></a>
                     </div>
                     <div class="d-flex rounded-circle text-center bg-site ml-2">
-                        <a class="m-auto" href=""><i class="fas fa-map-marker-alt text-white fa-1.5x"></i></a>
+                        <a class="m-auto" href="https://goo.gl/maps/oPKwgrUTj3w8CZZ49"><i
+                                class="fas fa-map-marker-alt text-white fa-1.5x"></i></a>
                     </div>
                 </div>
 
