Atualização de textos

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <!-- Informations -->
             <div class="d-block col-md-4 mx-auto my-3">
 
+                <!-- Links -->
                 <div class="d-flex">
                     <div class="d-flex rounded-circle text-center bg-pink-site">
                         <a class="m-auto" href="https://www.instagram.com/lepaincaseiro/"><i
@@ -175,8 +176,9 @@
                     </div>
                 </div>
 
+                <!-- Text -->
                 <div class="text-left my-3 text-white">
-                    <p>Edf. Barroco, Apt 302.
+                    <p>Edf. Barroco.
                         <br>
                         Rua Manoel Barreto, nº 67. Graça.
                         <br>
