--- a/index.html
+++ b/index.html
@@ -41,21 +41,7 @@
 
 <body>
 
-    <section id="presentation" class="d-block size-page">
-
-        <div id="carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block" src="images/croissant_aberto.png" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block" src="images/pain_au_chocolat.png" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block" src="images/novo_experimento.png" alt="Third slide">
-                </div>
-            </div>
-        </div>
+    <section id="presentation" class="d-block size-page pb-5">
 
         <div id="perfilNavbar" class="row col-12 mx-auto d-flex">
 
@@ -170,17 +156,13 @@
                         <a class="m-auto" href="https://www.instagram.com/lepaincaseiro/"><i
                                 class="fab fa-instagram text-white fa-1.5x"></i></a>
                     </div>
-                    <div class="d-flex rounded-circle text-center bg-site ml-2">
-                        <a class="m-auto" href="https://goo.gl/maps/oPKwgrUTj3w8CZZ49"><i
-                                class="fas fa-map-marker-alt text-white fa-1.5x"></i></a>
-                    </div>
                 </div>
 
                 <!-- Text -->
                 <div class="text-left my-3 text-white">
-                    <p>Edf. Barroco.
+                    <p>Entrega :
                         <br>
-                        Rua Manoel Barreto, nº 67. Graça.
+                        Rua Manoel Barreto. Graça.
                         <br>
                         Salvador/Bahia/Brasil.
                         <br>
@@ -242,7 +224,7 @@
             <div class="col-12 text-center text-white mt-2">
                 <blockquote>
                     <p>&copy 2020 Todos os direitos reservados.</p>
-                    <footer class="blockquote-footer text-white">By <cite><a class="text-primary" target=""
+                    <footer class="blockquote-footer text-white">By <cite><a class="text-site" target=""
                                 href="https://www.messias.gq">Messias
                                 Nunesmaia</a></cite></footer>
                 </blockquote>
