--- a/sobre.html
+++ b/sobre.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- About -->
-        <div id="about" class="col-11 mx-auto my-5 py-5">
+        <div id="about" class="col-11 mx-auto mt-5 py-5">
 
             <div class="row">
 
@@ -122,17 +122,13 @@
                         <a class="m-auto" href="https://www.instagram.com/lepaincaseiro/"><i
                                 class="fab fa-instagram text-white fa-1.5x"></i></a>
                     </div>
-                    <div class="d-flex rounded-circle text-center bg-site ml-2">
-                        <a class="m-auto" href="https://goo.gl/maps/oPKwgrUTj3w8CZZ49"><i
-                                class="fas fa-map-marker-alt text-white fa-1.5x"></i></a>
-                    </div>
                 </div>
 
                 <!-- Text -->
                 <div class="text-left my-3 text-white">
-                    <p>Edf. Barroco.
+                    <p>Entrega :
                         <br>
-                        Rua Manoel Barreto, nº 67. Graça.
+                        Rua Manoel Barreto. Graça.
                         <br>
                         Salvador/Bahia/Brasil.
                         <br>
@@ -194,7 +190,7 @@
             <div class="col-12 text-center text-white mt-2">
                 <blockquote>
                     <p>&copy 2020 Todos os direitos reservados.</p>
-                    <footer class="blockquote-footer text-white">By <cite><a class="text-primary" target=""
+                    <footer class="blockquote-footer text-white">By <cite><a class="text-site" target=""
                                 href="https://www.messias.gq">Messias
                                 Nunesmaia</a></cite></footer>
                 </blockquote>
