--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
                         conteúdo do card.</p>
                     <a class="btn text-white py-3 bg-site px-5"
-                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !">
+                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !">
                         <i class="fab fa-whatsapp pr-3"></i>Abrir Whatsapp</a>
                 </div>
 
@@ -206,7 +206,7 @@
 
                 <div class="row my-3 mx-auto">
                     <a class="col-12 btn bg-site text-white py-2"
-                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !"><i
+                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !"><i
                             class="fab fa-whatsapp pr-3"></i>Entre em contato</a>
                 </div>
 
