--- a/sobre.html
+++ b/sobre.html
@@ -172,7 +172,7 @@
 
                 <div class="row my-3 mx-auto">
                     <a class="col-12 btn bg-site text-white py-2"
-                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Estou entrando em contato para adquirir massas artesanais !"><i
+                        href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !"><i
                             class="fab fa-whatsapp pr-3"></i>Entre em contato</a>
                 </div>
 
