Implementação de fontes novas e atualização de background

--- a/sobre.html
+++ b/sobre.html
@@ -43,44 +43,9 @@
 
     <section id="presentation" class="d-block size-page">
 
-        <!-- Perfil and Navbar-->
-        <div id="perfilNavbar" class="row col-12 d-flex">
-
-            <!-- Perfil -->
-            <div id="perfil" class="row col-2 pl-4 pr-auto pt-3 pb-auto">
-                <img src="./images/logo.png" alt="logo">
-            </div>
-
-            <!-- Navbar -->
-            <nav id="navbar" class="col-6 col-md-10 text-right ml-auto my-auto navbar navbar-expand-lg">
-
-                <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite"
-                    aria-controls="navbarSite" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="text-site"><i class="fas fa-bars mr-2 text-site"></i>Menu</span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSite">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-site" href="index.html">Início</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-site" href="#">Curiosidades</a>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-site" href="https://www.instagram.com/lepaincaseiro/"><i
-                                    class="fab fa-instagram fa-lg"></i></a>
-                        </li>
-                    </ul>
-                </div>
-
-            </nav>
-
+         <!-- Perfil -->
+         <div id="perfil" class="row col-2 pl-4 pr-auto pt-3 pb-auto">
+            <a href="index.html"><img src="./images/logo.png" alt="logo"></a>
         </div>
 
         <!-- About -->
