--- a/cardapio.html
+++ b/cardapio.html
@@ -48,7 +48,7 @@
 
             <!-- Perfil -->
             <div id="perfil" class="row col-2 pl-4 pr-auto pt-3 pb-auto">
-                <img src="./images/logo.png" alt="logo">
+                <a href="index.html"><img src="./images/logo.png" alt="logo"></a>
             </div>
 
             <!-- Navbar -->
