--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 
     <section id="presentation" class="d-block size-page pb-5">
 
+        <!-- Navbar -->
         <div id="perfilNavbar" class="row col-12 mx-auto d-flex">
 
             <!-- Perfil -->
             <div id="perfil" class="row col-2 pl-4 pr-auto pt-3 pb-auto">
-                <img src="./images/logo.png" alt="logo">
+                <a href="index.html"><img src="./images/logo.png" alt="logo"></a>
             </div>
 
             <!-- Navbar -->
@@ -83,9 +84,10 @@
 
         </div>
 
+        <!-- Title -->
         <div id="title" class="d-block col-10 row col-10 mx-auto my-5">
-            <h1 class="d-none d-md-block col-10 display-3 mx-auto text-center text-white"><strong>Massas
-                    Artesanais</strong>
+            <h1 class="d-none d-md-block col-10 display-3 mx-auto text-center text-white">Massas
+                Artesanais
             </h1>
             <h1 class="d-sm-none col-10 mx-auto text-center text-white"><strong>Massas Artesanais</strong></h1>
             <a class="row col-4 col-md-1 scroll mx-auto mt-5" href="#content"><i
@@ -104,14 +106,14 @@
 
                 <!-- Image -->
                 <div class="col-12 col-md-3 mx-auto">
-                    <img class="col-inner rounded shadow-sm" src="images/croissant_story.png" alt="croissant_story">
+                    <img class="col-inner rounded shadow" src="images/croissant_story.png" alt="croissant_story">
                 </div>
 
                 <!-- Text -->
                 <div class="col-12 col-md-6 mr-auto my-5 ">
                     <h6 class="card-subtitle mb-2 text-muted">SOBRE</h6>
-                    <h2 class="card-title"><strong>Pães caseiros sem conservantes e sob
-                            encomenda</strong></h2>
+                    <h2 class="card-title">Pães caseiros sem conservantes e sob
+                            encomenda</h2>
                     <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
                         conteúdo do card.</p>
                     <a class="btn text-white py-3 bg-site px-5"
@@ -129,7 +131,7 @@
             <!-- Text -->
             <div class="col-12 col-md-6 mr-auto my-5 ">
                 <h6 class="card-subtitle mb-2 text-muted">CURIOSIDADES</h6>
-                <h2 class="card-title"><strong>Saiba as melhores curiosidades sobre a vida culinária.</strong></h2>
+                <h2 class="card-title">Saiba as melhores curiosidades sobre a vida culinária.</h2>
             </div>
 
             <div class="row mx-auto">
