Alteração de fontes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+
     <!-- Script Roll -->
     <script>
         jQuery(document).ready(function ($) {
@@ -113,7 +117,7 @@
                 <div class="col-12 col-md-6 mr-auto my-5 ">
                     <h6 class="card-subtitle mb-2 text-muted">SOBRE</h6>
                     <h2 class="card-title">Pães caseiros sem conservantes e sob
-                            encomenda</h2>
+                        encomenda</h2>
                     <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
                         conteúdo do card.</p>
                     <a class="btn text-white py-3 bg-site px-5"
