--- a/cardapio.html
+++ b/cardapio.html
@@ -26,6 +26,10 @@
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+
     <!-- Script Roll -->
     <script>
         jQuery(document).ready(function ($) {
@@ -107,7 +111,8 @@
                             <h6 class="text-muted card-substitle mb-2">R$ 15,00</h6>
                             <p class="card-text">Croissant amanteigado feito com farinha de trigo, manteiga extra (em
                                 tablete). Crocante por fora macio por dentro. 45g.</p>
-                            <a class="card-link text-site float-right" href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero croissants !">Comprar</a>
+                            <a class="card-link text-site float-right"
+                                href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero croissants !">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -120,7 +125,8 @@
                             <h6 class="text-muted card-substitle mb-2">R$ 25,00</h6>
                             <p class="card-text">Pain au chocolat tem como base masse folheada, com tabletes de
                                 chocolate derretido por dentro. 75g</p>
-                            <a class="card-link text-site float-right" href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero Pain au chocolat !">Comprar</a>
+                            <a class="card-link text-site float-right"
+                                href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero Pain au chocolat !">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +139,8 @@
                             <h6 class="text-muted card-substitle mb-2">R$ 10,00</h6>
                             <p class="card-text">Pão italiano feito com farinha de trigo e óleo de oliva extra-virgem.
                                 Cortes artesanais. 530g</p>
-                            <a class="card-link text-site float-right" href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero pão italiano !">Comprar</a>
+                            <a class="card-link text-site float-right"
+                                href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero pão italiano !">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -146,7 +153,8 @@
                             <h6 class="text-muted card-substitle mb-2">R$ 12,00</h6>
                             <p class="card-text">Pão árabe leve, saudável e macio feito com óleo de oliva e
                                 <strong>sem</strong> açúcar. 66g.</p>
-                            <a class="card-link text-site float-right" href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero pães árabes !">Comprar</a>
+                            <a class="card-link text-site float-right"
+                                href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero pães árabes !">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +167,8 @@
                             <h6 class="text-muted card-substitle mb-2">R$ 14,25</h6>
                             <p class="card-text">Pão semi-integral feito com farinha integral e aveia. Recheado com
                                 castanhas do pará e uvas-passas. 330g</p>
-                            <a class="card-link text-site float-right" href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero Pão Semi-integral !">Comprar</a>
+                            <a class="card-link text-site float-right"
+                                href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, quero Pão Semi-integral !">Comprar</a>
                         </div>
                     </div>
                 </div>
