Atualização de botões

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Montserrat+Alternates&display=swap" rel="stylesheet">
 
     <!-- Script Roll -->
     <script>
@@ -120,7 +119,7 @@
                         encomenda</h2>
                     <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o
                         conteúdo do card.</p>
-                    <a class="btn text-white py-3 bg-site px-5"
+                    <a class="btn transition-site py-3 px-5"
                         href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !">
                         <i class="fab fa-whatsapp pr-3"></i>Abrir Whatsapp</a>
                 </div>
@@ -204,14 +203,14 @@
             <div class="d-block col-md-4 mx-auto my-3 py-4">
 
                 <div class="row my-3 mx-auto">
-                    <a class="col-12 btn bg-site text-white py-2" href="tel:71999020336"><i
+                    <a class="col-12 btn transition-site py-2" href="tel:71999020336"><i
                             class="fas fa-phone-alt pr-3"></i>Ligue
                         agora:
                         (71) 9 99020336</a>
                 </div>
 
                 <div class="row my-3 mx-auto">
-                    <a class="col-12 btn bg-site text-white py-2"
+                    <a class="col-12 btn transition-site py-2"
                         href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !"><i
                             class="fab fa-whatsapp pr-3"></i>Entre em contato</a>
                 </div>
