--- a/sobre.html
+++ b/sobre.html
@@ -27,8 +27,7 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Montserrat+Alternates&display=swap" rel="stylesheet">
 
     <!-- Script Roll -->
     <script>
@@ -66,10 +65,10 @@
                 <div class="collapse navbar-collapse" id="navbarSite">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link nav-link-site-active" href="index.html">Início</a>
+                            <a class="nav-link nav-link-site" href="index.html">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-site" href="sobre.html">Sobre</a>
+                            <a class="nav-link nav-link-site-active" href="sobre.html">Sobre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-link-site" href="cardapio.html">Cardápio</a>
@@ -169,14 +168,14 @@
             <div class="d-block col-md-4 mx-auto my-3 py-4">
 
                 <div class="row my-3 mx-auto">
-                    <a class="col-12 btn bg-site text-white py-2" href="tel:71999020336"><i
+                    <a class="col-12 btn transition-site py-2" href="tel:71999020336"><i
                             class="fas fa-phone-alt pr-3"></i>Ligue
                         agora:
                         (71) 9 99020336</a>
                 </div>
 
                 <div class="row my-3 mx-auto">
-                    <a class="col-12 btn bg-site text-white py-2"
+                    <a class="col-12 btn transition-site py-2"
                         href="https://api.whatsapp.com/send?phone=5571999020336&text=Olá, tenho interesses em seus produtos !"><i
                             class="fab fa-whatsapp pr-3"></i>Entre em contato</a>
                 </div>
