Criação de curiosidades e implementação do Firebase

--- a/cardapio.html
+++ b/cardapio.html
@@ -75,7 +75,7 @@
                             <a class="nav-link nav-link-site-active" href="cardapio.html">Cardápio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-site" href="#">Curiosidades</a>
+                            <a class="nav-link nav-link-site" href="curiosidades.html">Curiosidades</a>
                         <li class="nav-item">
                             <a class="nav-link nav-link-site" href="https://www.instagram.com/lepaincaseiro/"><i
                                     class="fab fa-instagram fa-lg"></i></a>
@@ -89,9 +89,9 @@
 
         <!-- Title -->
         <div id="title" class="d-block col-10 row col-10 mx-auto my-5">
-            <h1 class="d-none d-md-block col-10 display-3 mx-auto text-center text-white"><strong>Cardápio</strong>
+            <h1 class="d-none d-md-block col-10 display-3 mx-auto text-center text-white">Cardápio
             </h1>
-            <h1 class="d-sm-none col-10 mx-auto text-center text-white"><strong>Cardápio</strong></h1>
+            <h1 class="d-sm-none col-10 mx-auto text-center text-white">Cardápio</h1>
         </div>
 
     </section>
