Implementação de login, logout e filter

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="row">
 
                 <!-- Image -->
-                <div class="col-12 col-md-3 mx-auto">
+                <div class="col-12 col-md-3 mx-auto my-auto">
                     <img class="col-inner rounded shadow" src="images/croissant_story.png" alt="croissant_story">
                 </div>
 
@@ -255,12 +255,14 @@
 
 
 
-    
+
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
 
     <script>
